--- a/trunk/src/mainwindow.ui
+++ b/trunk/src/mainwindow.ui
@@ -16,7 +16,7 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <widget class="QTreeView" name="treeView"/>
+     <widget class="QListWidget" name="listWidget"/>
     </item>
    </layout>
   </widget>
