--- a/trunk/src/about.ui
+++ b/trunk/src/about.ui
@@ -25,6 +25,9 @@
    <property name="text">
     <string>Close</string>
    </property>
+   <property name="default">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
@@ -74,6 +77,9 @@
    </property>
    <property name="text">
     <string>http://code.google.com/p/eepe/</string>
+   </property>
+   <property name="textFormat">
+    <enum>Qt::RichText</enum>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
