--- a/trunk/src/mainwindow.ui
+++ b/trunk/src/mainwindow.ui
@@ -23,6 +23,9 @@
         <pointsize>14</pointsize>
        </font>
       </property>
+      <property name="contextMenuPolicy">
+       <enum>Qt::CustomContextMenu</enum>
+      </property>
      </widget>
     </item>
    </layout>
