--- a/src/generaledit.ui
+++ b/src/generaledit.ui
@@ -21,7 +21,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tabSetup">
       <attribute name="title">
@@ -97,6 +97,15 @@
          </property>
          <property name="decimals">
           <number>1</number>
+         </property>
+         <property name="minimum">
+          <double>-9.900000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>9.900000000000000</double>
+         </property>
+         <property name="singleStep">
+          <double>0.100000000000000</double>
          </property>
         </widget>
        </item>
@@ -1030,10 +1039,10 @@
           <number>1</number>
          </property>
          <property name="minimum">
-          <double>-999.899999999999977</double>
+          <double>-9.900000000000000</double>
          </property>
          <property name="maximum">
-          <double>999.899999999999977</double>
+          <double>9.900000000000000</double>
          </property>
          <property name="singleStep">
           <double>0.100000000000000</double>
