--- a/src/eepe.qrc
+++ b/src/eepe.qrc
@@ -7,5 +7,6 @@
         <file>images/paste.png</file>
         <file>images/save.png</file>
         <file>icon.ico</file>
+        <file>images/eepe-title.png</file>
     </qresource>
 </RCC>
